--- a/app.json
+++ b/app.json
@@ -3,9 +3,8 @@
     "pages/index/index",
     "pages/todo/index",
     "pages/todo/create",
-    "pages/note/index",
-    "pages/note/create",
-    "pages/me/index"
+    "pages/in_progress/index",
+    "pages/completed/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -18,21 +17,26 @@
     "selectedColor": "#6482DD",
     "borderStyle": "black",
     "backgroundColor": "#FFFFFF",
-    "list": [{
+    "list": [
+      {
         "pagePath": "pages/todo/index",
         "text": "任务",
         "iconPath": "/assets/img/icon-todo.png",
         "selectedIconPath": "/assets/img/icon-todo-active.png"
-      },{
-        "pagePath": "pages/note/index",
-        "text": "笔记",
+      },
+      {
+        "pagePath": "pages/in_progress/index",
+        "text": "进行中",
         "iconPath": "/assets/img/icon-note.png",
         "selectedIconPath": "/assets/img/icon-note-active.png"
-      },{
-        "pagePath": "pages/me/index",
-        "text": "我",
+      },
+      {
+        "pagePath": "pages/completed/index",
+        "text": "已完成",
         "iconPath": "/assets/img/icon-user.png",
         "selectedIconPath": "/assets/img/icon-user-active.png"
-      }]
-  }
+      }
+    ]
+  },
+  "sitemapLocation": "sitemap.json"
 }
