--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "description": "项目配置文件。",
+  "description": "Project Config File",
   "setting": {
     "urlCheck": true,
     "es6": true,
@@ -36,7 +36,7 @@
   "compileType": "miniprogram",
   "libVersion": "1.7.2",
   "appid": "touristappid",
-  "projectname": "TodoList",
+  "projectname": "RecallReminder",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {
